--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -88,6 +88,14 @@
     "translation": "用户账户分类变更失败"
   },
   {
+    "id": "100022",
+    "translation": "密码加密异常"
+  },
+  {
+    "id": "100023",
+    "translation": "数据存储失败"
+  },
+  {
     "id": "200002",
     "translation": "登陆凭证生成失败"
   },
