refactor(core): 调整错误说明

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -73,7 +73,7 @@
   },
   {
     "id": "100018",
-    "translation": "Please bind the DeepSeek API key before proceeding"
+    "translation": "Please bind the deepseek API key in user settings before proceeding"
   },
   {
     "id": "100019",
