--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -73,7 +73,7 @@
   },
   {
     "id": "100018",
-    "translation": "请先绑定 deepseek API key 后再进行操作"
+    "translation": "请先与用户设置中绑定 deepseek API key 后再进行操作"
   },
   {
     "id": "100019",
