fix(core): 无账单时不允许调用AI统计

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -96,6 +96,10 @@
     "translation": "Data storage failed"
   },
   {
+    "id": "100024",
+    "translation": "No data available. Please perform analysis after querying the data"
+  },
+  {
     "id": "200002",
     "translation": "Failed to generate login credential"
   },
