--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -96,6 +96,10 @@
     "translation": "数据存储失败"
   },
   {
+    "id": "100024",
+    "translation": "无数据，请查询到数据后再进行分析"
+  },
+  {
     "id": "200002",
     "translation": "登陆凭证生成失败"
   },
